[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/terrain/BasicCastle.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Map.gd" type="Script" id=3]
[ext_resource path="res://game/entities/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/terrain/SpawnBeam.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )

[sub_resource type="Environment" id=2]
background_mode = 1
background_sky = SubResource( 1 )
background_color = Color( 0.0745098, 0.0588235, 0.101961, 1 )
background_energy = 0.0
ambient_light_color = Color( 0.580392, 0.580392, 0.823529, 1 )
ambient_light_energy = 0.7
fog_enabled = true
fog_color = Color( 0.054902, 0.0509804, 0.054902, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 1.0
fog_depth_end = 5.0
fog_transmit_enabled = true

[sub_resource type="Animation" id=3]
resource_name = "Player Attack"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 95.0, 90.0 ]
}

[node name="Map" type="Spatial"]
script = ExtResource( 3 )
enemy_scene = ExtResource( 4 )
difficulty = 10
camera_rotational_speed = 24.0
camera_dist = 0.8
camera_displacement = Vector3( 0, 0.2, 0.5 )

[node name="BasicCastle" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.189922, 0 )
dash_acceleration = 600

[node name="RayCast" type="RayCast" parent="Player"]
enabled = true
cast_to = Vector3( 0, 0.3, 1.5 )
collision_mask = 4

[node name="ViewTarget" type="Position3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.713635, -0.288782, 0.638224, -0.019863, 0.902367, 0.430511, -0.700236, -0.319905, 0.638224, 4, 3.012, 4 )
visible = false
light_color = Color( 0.580392, 0.580392, 0.823529, 1 )
light_energy = 0.5
spot_range = 30.1104
spot_angle = 81.6888

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SpawnPoints" type="Spatial" parent="."]

[node name="SpawnPoint" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.340319, 0.197998, 1.9524 )

[node name="SpawnPoint2" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.446316, 0.197998, -0.0536762 )

[node name="SpawnPoint3" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45357, 0.197998, -0.297801 )

[node name="SpawnPoint4" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12702, 0.197998, 0.0579581 )

[node name="SpawnPoint5" type="Position3D" parent="SpawnPoints"]
transform = Transform( -0.192539, 0, -0.981289, 0, 1, 0, 0.981289, 0, -0.192539, 0.830196, 0.197998, 0.124605 )

[node name="SpawnPoint6" type="Position3D" parent="SpawnPoints"]
transform = Transform( -0.192539, 0, -0.981289, 0, 1, 0, 0.981289, 0, -0.192539, -0.679708, 0.197998, -0.65397 )

[node name="SpawnPoint7" type="Position3D" parent="SpawnPoints"]
transform = Transform( -0.192539, 0, -0.981289, 0, 1, 0, 0.981289, 0, -0.192539, 0.433132, 0.197998, 1.43484 )

[node name="SpawnPoint8" type="Position3D" parent="SpawnPoints"]
transform = Transform( -0.192539, 0, -0.981289, 0, 1, 0, 0.981289, 0, -0.192539, 0.0310872, 0.197998, 0.99903 )

[node name="SpawnBeam" parent="." instance=ExtResource( 5 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 3, 1, 3 )
fov = 90.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Player Attack" = SubResource( 3 )

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00903, 0.364732, -2.94833 )
light_color = Color( 0.580392, 0.580392, 0.823529, 1 )

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.09016, 0.364732, 2.33291 )
light_color = Color( 0.580392, 0.580392, 0.823529, 1 )

[node name="OmniLight3" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.45862, 0.364732, -0.0349171 )
light_color = Color( 0.580392, 0.580392, 0.823529, 1 )

[connection signal="attack" from="Player" to="." method="_on_Player_attack"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="spawn" from="SpawnBeam" to="." method="_spawn_enemy"]
